# state-machine-diagram-inference

./: LICENSE  README.md
.github/workflows/: ci-text-scrambling.yml
data/opcua-scrambled/code/: part10_fig3.cpp  part14_fig22.cpp  part15_fig15.cpp  part15_fig16.cpp  part16_fig1.cpp  part16_fig12.cpp  part16_fig16.cpp  part16_fig3.cpp  part16_fig4.png.cpp  part16_fig5.cpp  part20_fig4.cpp  part9_fig1.cpp  part9_fig16.cpp  part9_fig4.cpp  part9_figF1.cpp
data/opcua-scrambled/ground-truth/: part10_fig3.txt  part14_fig22.txt  part15_fig15.txt  part15_fig16.txt  part16_fig1.txt  part16_fig12.txt  part16_fig16.txt  part16_fig3.txt  part16_fig4.png.txt  part16_fig5.txt  part20_fig4.txt  part9_fig1.txt  part9_fig16.txt  part9_fig4.txt  part9_figF1.txt
data/opcua-scrambled/tests/: part10_fig3.cpp  part14_fig22.cpp  part15_fig15.cpp  part15_fig16.cpp  part16_fig1.cpp  part16_fig12.cpp  part16_fig16.cpp  part16_fig3.cpp  part16_fig4.png.cpp  part16_fig5.cpp  part20_fig4.cpp  part9_fig1.cpp  part9_fig16.cpp  part9_fig4.cpp  part9_figF1.cpp
data/profinet-scrambled/code/: image-01.cpp  image-02.cpp  image-03.cpp  image-04.cpp  image-05.cpp  image-06.cpp  image-07.cpp  image-08.cpp  image-09.cpp  image-10.cpp  image-11.cpp  image-12.cpp  image-13.cpp  image-14.cpp  image-15.cpp  image-16.cpp  image-17.cpp  image-18.cpp  image-19.cpp  image-20.cpp  image-21.cpp  image-22.cpp  image-23.cpp  image-24.cpp  image-25.cpp  image-26.cpp  image-27.cpp  image-28.cpp  image-29.cpp  image-30.cpp  image-31.cpp  image-32.cpp  image-33.cpp  image-34.cpp  image-35.cpp  image-36.cpp  image-37.cpp  image-38.cpp  image-39.cpp  image-40.cpp  (+40 more)
data/profinet-scrambled/ground-truth/: image-01.txt  image-02.txt  image-03.txt  image-04.txt  image-05.txt  image-06.txt  image-07.txt  image-08.txt  image-09.txt  image-10.txt  image-11.txt  image-12.txt  image-13.txt  image-14.txt  image-15.txt  image-16.txt  image-17.txt  image-18.txt  image-19.txt  image-20.txt  image-21.txt  image-22.txt  image-23.txt  image-24.txt  image-25.txt  image-26.txt  image-27.txt  image-28.txt  image-29.txt  image-30.txt  image-31.txt  image-32.txt  image-33.txt  image-34.txt  image-35.txt  image-36.txt  image-37.txt  image-38.txt  image-39.txt  image-40.txt  (+40 more)
data/profinet-scrambled/tests/: image-01.cpp  image-02.cpp  image-03.cpp  image-04.cpp  image-05.cpp  image-06.cpp  image-07.cpp  image-08.cpp  image-09.cpp  image-10.cpp  image-11.cpp  image-12.cpp  image-13.cpp  image-14.cpp  image-15.cpp  image-16.cpp  image-17.cpp  image-18.cpp  image-19.cpp  image-20.cpp  image-21.cpp  image-22.cpp  image-23.cpp  image-24.cpp  image-25.cpp  image-26.cpp  image-27.cpp  image-28.cpp  image-29.cpp  image-30.cpp  image-31.cpp  image-32.cpp  image-33.cpp  image-34.cpp  image-35.cpp  image-36.cpp  image-37.cpp  image-38.cpp  image-39.cpp  image-40.cpp  (+40 more)
experiment-0/: .gitignore  pyproject.toml
experiment-0/experiment0/: evaluate.py  run_and_evaluate.py  run_chatgpt.py
infer-edges-and-generate-test-code/: .gitignore  README.md  example-edges.txt  pyproject.toml
infer-edges-and-generate-test-code/infer_edges_and_generate_test_code/: common.py  generate_all.py  generate_code.py  generate_tests.py  infer_edges.py
text-scrambling/: .gitignore  README.md  precommit.py  pyproject.toml  requirements.txt
text-scrambling/text_scrambling/: main.py
